k8s/istio-blue-green-deploy/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  labels:
    app: flask-app
    version: v2
    service.istio.io/canonical-name: flask-app
spec:
  # type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
    version: v2
