k8s/istio-blue-green-deploy/istio-flask-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-app
spec:
  host: flask-app
  subsets:
  - name: blue
    labels:
      version: v1
  - name: green
    labels:
      version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alb-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - route:
    - destination:
        host: blue-service
        port:
          number: 80
        subset: blue
      weight: 0
    - destination:
        host: green-service
        port:
          number: 80
        subset: green
      weight: 100
